# self-improving-agent-platform

./: .gitignore  Makefile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval-gate.yml
.impeccable/live/: config.json
backend/: .dockerignore  Dockerfile  Makefile  docker-entrypoint.sh  requirements.txt
backend/configs/: active.json  promotions.jsonl
backend/src/: __init__.py
backend/tests/: test_api.py  test_eval_m4.py  test_fusion.py  test_index.py  test_loaders.py  test_reranker_flywheel.py  test_sim.py
docs/: 00-what-it-is.md  01-architecture.md  02-build-plan.md  03-setup.md
docs/assets/: architecture.html
eval/agent/: M3_FINDINGS.md  m2_demo.json  m3_demo.json
eval/flywheel/: FINDINGS.md
eval/golden/: FINDINGS.md  bad_prompt.txt  duckdb.yaml  records_bad.json  report_bad.md  report_good.md
eval/retrieval/: FINDINGS.md  report.md
eval/sim/: promotions.jsonl  weekly.json
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-header.tsx  curve.tsx  status-badge.tsx
src/: corpus.py  interfaces.py  types.py
src/agent/: __main__.py  loop.py  router.py  tools.py
src/eval/: __init__.py  __main__.py  golden.py  metrics.py  (+1 more)
tests/: conftest.py  test_agent_guardrails.py  test_agent_loop.py  test_chunker.py  test_citations.py  test_flywheel.py  test_graph.py  test_guardrails.py  test_metrics.py  test_ops.py  test_pipeline.py  test_retrieval_pipeline.py  test_tools.py
(+64 files in other folders)
