[project]
name = "self-improving-agent-platform"
version = "0.1.0"
description = "Multi-tenant domain agent platform with a closed evaluation-and-retraining loop"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: needs a real model download or network",
    "cloud: needs Claude/Bedrock credentials and spends money",
]
